# SafetyZone

./: .gitignore  README.md  pyproject.toml
.cursor/agents/: code-reviewer.md  harness-reviewer.md  parallel-planner.md  plan-designer.md
.cursor/commands/: commit.md  (+5 more)
app/: camera_source.py  demo.py  events.py  frame_bridge.py  inference_worker.py  main.py  multi_runtime.py  pipeline.py  run_controller.py  signal_adapter.py  signal_display.py  visualize.py
camera/: __init__.py  base.py  v4l2_usb.py  video_file.py
configs/: config.example.json  config.jetson.json  config.plc.example.json
core/: __init__.py  config.py  fsm.py  postprocess.py  tracking.py  zone.py
detect/: __init__.py  backend.py  draw.py  hotswap.py  letterbox.py  onnx_backend.py  trt_backend.py
docs/: MIGRATION_SPEC.md  decisions.md  plc_field_checklist.md  validation_phases.md  安全区入侵检测系统_执行方案.md  安全区入侵检测系统_设计方案.md
jetson_update/: README.md  __init__.py  acceptance.py  build_engine.py  hotswap.py  receiver.py
plc/: __init__.py  gateway.py  process_worker.py  simulate.py  snap7_backend.py
record/: __init__.py  event_recorder.py
tests/: test_smoke.py
tools/: build_engine.sh  check_testset_overlap.py  detection_view_demo.py  e2e_production_dry_run.sh  jetson_4stream_benchmark.py  jetson_infer_smoke.py  jetson_yolo_benchmark.py  offline_check.sh  run_detection_view.sh  run_ui.sh
ui/: camera_panel.py  industrial_theme.py  log_panel.py  main_window.py  param_group_dialog.py  plc_dialog.py  station_view.py  zone_editor.py
windows_studio/: README.md  __init__.py  app.py  wizard.py
(+93 files in other folders)
