[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safetyzone"
version = "0.1.0"
description = "Industrial safety zone intrusion detection (Jetson edge + PLC)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]
detect = [
    "opencv-python-headless>=4.8",
    "onnxruntime>=1.16",
]
detect-gpu = [
    "opencv-python-headless>=4.8",
    "onnxruntime-gpu>=1.16",
]
jetson = [
    "opencv-python-headless>=4.8",
    "PySide6>=6.5",
    "python-snap7>=3.0",
]
windows = [
    "opencv-python-headless>=4.8",
    "PySide6>=6.5",
    "ultralytics>=8.0",
    "onnxruntime-gpu>=1.16",
]

[project.scripts]
safetyzone-demo = "app.demo:main"
safetyzone = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "detect*", "camera*", "plc*", "record*", "ui*", "app*", "jetson_update*", "windows_studio*", "tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
